# tinyrenderer

./: .clang-format  .gitignore  .gitpod.yml  01-bresenham.md  CMakeLists.txt  Dockerfile  Drawing a circle  LICENSE.txt  Makefile  README.md  _config.yml  geometry.cpp  geometry.h  graphics.cpp  graphics.h  index.html  index.md  macroses.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  params.json  shaders.txt  tgaimage.cpp  tgaimage.h  tinyrenderer.files  vec-simple.h
img/04-perspective-projection/src/: f00.tex  f01.tex  f02.tex  f03.tex  f04.tex  f05.tex  f06.tex  f07.tex  f08.tex  f09.tex  f10.tex  f11.tex  f12.tex  f13.tex  f14.tex  f15.tex  f16.tex  f17.tex  generate.sh  homogenious.xoj  homogenious2.xoj  projection.xoj
img/05-camera/src/: basis_change.fig  f00.tex  f01.tex  f02.tex  f03.tex  f04.tex  f05.tex  f06.tex  f07.tex  f08.tex  glulookat.fig  normal.fig
img/06b-tangent-space/: f00.tex  f01.tex  f02.tex  f03.tex  f04.tex  f05.tex  f06.tex  generate.sh
img/06b-tangent-space/src/: gradient_a.fig  gradient_b.fig  grid.fig  grid_texture.fig
img/td-perspective-correction/: f00.tex  f01.tex  f02.tex  f03.tex  f04.tex  f05.tex  f06.tex  f07.tex  f08.tex  f09.tex  f10.tex
misc/: resize.cpp  ybuffer.mtl
